istio/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: my-mtls
  namespace: default
spec:
  mtls:
    mode: PERMISSIVE
